# Internship_Assignment

./: .gitignore  Generative AI Beginner Track - FY 2025.xlsx  README.md
Agentic_AI_LOGIN2/backend/: main.py  pyproject.toml  requirements.txt
Agentic_AI_LOGIN2/frontend/: app.py
Agentic_AI_Login3/: hello.py  pyproject.toml  requirements.txt  streamlit_app.py  test_smtp.py
Agentic_AI_Login3/app/: main.py  mcp_mail.py  security_agent.py
Practise_Assigment/Fast_api/: database.py  database_model.py  main.py  models.py  temp.py
Practise_Assigment/mcp_demo_langchain/: client.py  db.py  mathServer.py  pyproject.toml  requirements.txt  weather.py
ass3_Streamlit/: app.py  chapter1.py  chapter2.py  chapter3.py  chapter4.py  chapter5.py  chatbot.py  open_ai.py  readcsv.py  stock_price.py  stock_price_new.py  stock_price_prediction.py  tasks.csv
ass4_AI_Integration/: ass.py  function_calling.py  gemini.py  open_ai.py
ass5_prompt_engineering/: prompt.txt
ass6_RAG/: app.py  pyproject.toml  requirement.txt
ass7_LangchainTutorial/: pyproject.toml
ass7_LangchainTutorial/CH_1/: 1_LLM_CALL.ipynb  2_LLM_MESSAGES.ipynb  3_Structured_Output.ipynb
ass7_LangchainTutorial/CH_2/: 1_first_chain.ipynb  3_Parallel_Chains.ipynb
ass7_Langgraph_assignment/: graph.py  hello.py  main.py  pyproject.toml  requirements.txt  state.py
ass8_mcp_assignment/: config.py  main.py  models.py  pyproject.toml  requirements.txt
ass_1_python_basics/: aniket.txt  calculator.py  file_parser.py  student.py
ass_2_task_manager_mongodb/: README.md  main.py  requirements.txt
(+80 files in other folders)
