[project]
name = "langchaintutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.60.0",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain>=1.2.7",
    "load-dotenv>=0.1.0",
]
