[project]
name = "mcp-demo-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.7",
    "mcp>=1.26.0",
    "pymongo>=4.16.0",
    "fastmcp>=2.14.4",
]
